# nd608-project-personalized-real-estate-agent

./: Demo-HomeMatch.html  Demo-HomeMatch.ipynb  Generate-Real-Estate-Listings.ipynb  HomeMatchReadme.txt  Listings.txt  README.md  app.py  db.py  models.py  pyproject.toml
data/: listings.pickle
data/lancedb/real_estate_listings.lance/_transactions/: 0-137c1115-a9e2-4fe7-89e9-1e0f802c2695.txn  0-48a02c21-b7b5-48d4-99dc-28b1bc9a5edc.txn  0-fec039d7-3cc4-4540-b0a0-ce58f7d3a026.txn  1-7730f456-ffd4-4241-abdf-d8e5cd1f5e96.txn  1-b9a15c1f-8ed4-41db-928f-997239565873.txn  1-ba4d57d3-9c45-4fdf-b774-5f29cf08614a.txn
