[tool.poetry]
name = "nd608-project-personalized-real-estate-agent"
version = "0.1.0"
description = ""
authors = ["Agustin Barto <abarto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
python-dotenv = "^1.0.1"
openai = "^1.23.2"
langchain-openai = "^0.1.3"
lancedb = "^0.6.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
